# benchmark-rust-analyzer-reads

./: Cargo.toml
src/: main.rs
