[package]
name = "benchmark-parallel-reads"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cargo_metadata = "0.18.1"
clap = { version = "4.5.7", features = ["derive"] }
rayon = "1.10.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
walkdir = "2"
